[package]
name = "nit-an"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0-beta.18"
env_logger = "0.9.0"
reqwest = { version = "0.11.8", features = ["blocking"] }
scraper = "0.12.0"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5.10", features = ["runtime-actix-native-tls", "postgres"] }
url = "2.2.2"
